--- a/bower.json
+++ b/bower.json
@@ -5,9 +5,9 @@
   "authors": [
     "zebrasinpyjamas"
   ],
-  "license": "MIT",
+  "license": "Apache2",
   "moduleType": [],
-  "homepage": "",
+  "homepage": "https://github.com/zebrasinpyjamas/bilgi-shuttle-webapp",
   "private": true,
   "ignore": [
     "**/.*",
@@ -18,6 +18,6 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap-grid": "bootstrap-grid-sass#~1.1.0"
+    "bootstrap-sass": "~3.3.6"
   }
 }
