--- a/package.json
+++ b/package.json
@@ -21,16 +21,20 @@
   "devDependencies": {
     "autoprefixer": "^6.3.6",
     "chai": "^3.5.0",
+    "coveralls": "^2.11.9",
     "css-loader": "^0.23.1",
     "enzyme": "^2.3.0",
     "express": "^4.13.4",
     "fetch-mock": "^4.5.0",
     "file-loader": "^0.8.5",
+    "istanbul-instrumenter-loader": "^0.2.0",
     "json-loader": "^0.5.4",
     "karma": "^0.13.22",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.0.0",
     "karma-es6-shim": "^1.0.0",
+    "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.0.1",
     "karma-mocha-reporter": "^2.0.3",
     "karma-sinon": "^1.0.5",
