--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "author": "Altay Aydemir <altay.aydemir@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^6.3.6",
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
     "css-loader": "^0.23.1",
@@ -41,7 +40,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
-    "postcss-assets": "^4.1.0",
+    "postcss-cssnext": "^2.6.0",
     "postcss-loader": "^0.9.1",
     "react-addons-test-utils": "^15.0.2",
     "react-hot-loader": "^1.3.0",
