Update structure and styling
    - Updated: naming and structure
    - Updated: responsive css
    - Added: Loader component
    - Fixed: #5
    - Fixed: #7

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ cache:
   - typings
   - screenshots
 install:
-  - npm run setup
+  - npm install
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
