--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "BilgiShuttleWeb",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Basic but useful web application for listing the shuttle routes and times of İstanbul Bilgi University",
   "main": "server.js",
   "scripts": {
@@ -42,7 +42,7 @@
     "mocha": "^2.4.5",
     "postcss-cssnext": "^2.6.0",
     "postcss-loader": "^0.9.1",
-    "react-addons-test-utils": "^15.0.2",
+    "react-addons-test-utils": "15.0.2",
     "react-hot-loader": "^1.3.0",
     "redux-logger": "^2.6.1",
     "redux-mock-store": "^1.0.2",
@@ -61,9 +61,9 @@
   },
   "dependencies": {
     "es6-promise": "^3.2.1",
-    "react": "^15.0.1",
+    "react": "15.0.1",
     "react-bootstrap": "^0.29.4",
-    "react-dom": "^15.0.1",
+    "react-dom": "15.0.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.4",
